# playground.drafts

./: .gitignore  Backlog.xmind  CHANGELOG.md  Makefile  README.md  blog-engine-clj-2022-08-28.txt  clojure-studies.md  deps.edn  dijkstra.clj  docker-compose.yml  draft.txt  foo.clj  graph-exec.clj  podcast-list.md  project.clj  projects-idea.md  python-roadmap-studies.md  q3.py  requirements.txt  structrue.md  study-guide.md
.docker/: test.Dockerfile
algorithms/: 433-minium-genetic-mutation.py  802_eventual_safe_states.py  93.py  all_path_btw_node.py  all_path_from-source.py  as_far_from_land_dfs.py  bfs.py  bfs_and_dfs.py  bfs_and_dfs_tmp.py  bfs_tmp.py  count_component.py  detect_cycle.py  find_all_conected_comp.py  graph.py  graph.txt  graph_valid_tree.py  has_cycle.py  matrix-uniq-paths-graph.py  merge_sort.py  minimum_round.py  nubmer_of_distinc_islands.py  number_of_enclaves_dfs.py  number_of_island.py  number_of_op_to_make_connected.py  open_lock_752.py  redundant_connection.py  rotting_oragens.py  topological_sort.py  transpose_graph.py  union-find.py  walls_and_gates.py  water_and_jug_probl.py  web_crawler.py  word_ladder.py
anki-clj-server/: README.md  docker-compose.yml
api/: CHANGELOG.md  README.md  project.clj
clj/: approach-patchforge.clj  deps.edn
clj-algos/: CHANGELOG.md  README.md  deps.edn
clj-api-remote-controller/: project.clj
clj-exp/: .gitignore
cpp/: compile.sh  test  test.cpp
cpp-learn/: main.cpp
cs-problems-python/: README.md  requirements.txt
doc/: intro.md
my-project/: Cargo.toml
my-project/src/: errors.rs  main.rs
(+257 files in other folders)
